syntax = "proto3";
option java_multiple_files = true;
package com.market.marketservice.server;

message MarketRequest {
  int32 itemId = 1;
}

message Market {
  int32 id = 1;
  string category = 2;
  int32 itemId = 3;
}

message MarketResponse {
  repeated Market market = 1;
}

service MarketService {
  rpc findMarketsByItemId(MarketRequest) returns (MarketResponse);
}